# FastDDSChat

./: README.md  ip_list.txt
ChatLogs/: placeholder.txt
FastDDS-Chat-Source/: CMakeLists.txt  README.md
FastDDS-Chat-Source/src/: FastDDSUser.cpp  Globals.hpp  UserChat.hpp  UserChat.idl  UserChatCdrAux.hpp  UserChatCdrAux.ipp  UserChatPubSubTypes.cxx  UserChatPubSubTypes.hpp  UserChatPublisher.hpp  UserChatSubscriber.hpp  UserChatTypeObjectSupport.cxx  UserChatTypeObjectSupport.hpp
